<resources>
    <string name="AppName">MeasureNote</string>
    <string name="action_add">ADD</string>
    <string name="action_stop">STOP</string>
    <string name="action_start">START</string>
    <string name="action_delete">DELETE</string>
    <string name="action_setting">Setting</string>
    <string name="hint_start_timer">The timer starts when you start editing</string>
    <string name="no_data">No data available</string>
    <string name="content_activity" translatable="false">content_activity</string>
    <string name="content_setting">Settings</string>
    <string name="OK">OK</string>
    <string name="not_set">Not set</string>
    <string name="default_time" translatable="false">00:00:00</string>
    <string name="font_size">Letter size</string>
    <string name="background_color">Background color</string>
    <string name="setCount">Setting target number of characters</string>
    <string name="count">count</string>
    <string name="slash" translatable="false"> / </string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3926374163661220/2610502155</string>
    <string name="key_screen_reverse" translatable="false">screen.reverse</string>
    <string name="key_text_size" translatable="false">text.size</string>
    <string name="setting_screen">Setting background color</string>
    <string name="setting_text">Setting text</string>
    <string name="setting_text_size">Setting font size</string>
    <string name="settings_screen_color_reverse">Night mode</string>
    <string name="setting_text_size_dialog_title">Select font size</string>
    <string name="setting_text_size_large">large</string>
    <string name="setting_text_size_medium">medium</string>
    <string name="setting_text_size_small">small</string>
    <string name="setting_text_size_value_large" translatable="false">large</string>
    <string name="setting_text_size_value_medium" translatable="false">medium</string>
    <string name="setting_text_size_value_small" translatable="false">small</string>
    <string name="permission_note_read_description">Read the information of the created note</string>
    <string name="permission_note_read_label">Read the note information</string>
    <string name="permission_note_write_description">Edit the information of the created note</string>
    <string name="permission_note_write_label">Edit the note information</string>
    <string name="permission_note_read" translatable="false">com.app.strkita.measurenote.note.read</string>
    <string name="permission_note_write" translatable="false">com.app.strkita.measurenote.note.write</string>
    <string name="text_size_values" translatable="false">text_size_values</string>
</resources>